abstract class Iterator<T> {
  bool hasNext();
  T next();
}