class Book {
  final String title;
  final String author;

  Book({required this.title, required this.author});

  @override
  String toString() => '"$title" de $author';
}